// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CategoryDetails /> renders when data is loaded 1`] = `
<div
  className="MuiGrid-typeItem-2 MuiGrid-grid-xs-12-38 MuiGrid-grid-md-9-61"
>
  <div
    className="MuiPaper-root-91 MuiPaper-elevation2-95 MuiPaper-rounded-92"
  >
    <div
      className="MuiToolbar-root-123 MuiToolbar-gutters-124 Component-toolbar-121"
    >
      <h2
        className="MuiTypography-root-125 MuiTypography-title-131 Component-title-120"
      >
        Books
      </h2>
      <button
        className="MuiButtonBase-root-155 MuiIconButton-root-149"
        disabled={false}
        onBlur={[Function]}
        onClick={[MockFunction]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiIconButton-label-154"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-158"
            color={undefined}
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zm2.46-7.12l1.41-1.41L12 12.59l2.12-2.12 1.41 1.41L13.41 14l2.12 2.12-1.41 1.41L12 15.41l-2.12 2.12-1.41-1.41L10.59 14l-2.13-2.12zM15.5 4l-1-1h-5l-1 1H5v2h14V4z"
            />
          </svg>
        </span>
        <span
          className="MuiTouchRipple-root-164"
        />
      </button>
      <a
        className="MuiButtonBase-root-155 MuiIconButton-root-149"
        href="/categories/Q2F0ZWdvcnk6NA==/edit/"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="button"
        tabIndex="0"
      >
        <span
          className="MuiIconButton-label-154"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-158"
            color={undefined}
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34c-.39-.39-1.02-.39-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
            />
          </svg>
        </span>
        <span
          className="MuiTouchRipple-root-164"
        />
      </a>
    </div>
    <div
      className="MuiCardContent-root-171"
    >
      <p
        className="MuiTypography-root-125 MuiTypography-body1-134"
      >
        Girl remain increase quite. More opportunity special special life foot employee. Wall employee all relate control cause need.
      </p>
    </div>
  </div>
</div>
`;

exports[`<CategoryDetails /> renders while data is loading 1`] = `
<div
  className="MuiGrid-typeItem-2 MuiGrid-grid-xs-12-38 MuiGrid-grid-md-9-61"
>
  <div
    className="MuiPaper-root-91 MuiPaper-elevation2-95 MuiPaper-rounded-92"
  >
    <div
      className="MuiToolbar-root-123 MuiToolbar-gutters-124 Component-toolbar-121"
    >
      <h2
        className="MuiTypography-root-125 MuiTypography-title-131 Component-title-120"
      >
        
      </h2>
      <button
        className="MuiButtonBase-root-155 MuiIconButton-root-149"
        disabled={false}
        onBlur={[Function]}
        onClick={[MockFunction]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiIconButton-label-154"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-158"
            color={undefined}
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zm2.46-7.12l1.41-1.41L12 12.59l2.12-2.12 1.41 1.41L13.41 14l2.12 2.12-1.41 1.41L12 15.41l-2.12 2.12-1.41-1.41L10.59 14l-2.13-2.12zM15.5 4l-1-1h-5l-1 1H5v2h14V4z"
            />
          </svg>
        </span>
        <span
          className="MuiTouchRipple-root-164"
        />
      </button>
      <a
        className="MuiButtonBase-root-155 MuiIconButton-root-149"
        href="/"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="button"
        tabIndex="0"
      >
        <span
          className="MuiIconButton-label-154"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-158"
            color={undefined}
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34c-.39-.39-1.02-.39-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
            />
          </svg>
        </span>
        <span
          className="MuiTouchRipple-root-164"
        />
      </a>
    </div>
    <div
      className="MuiCardContent-root-171"
    >
      <p
        className="MuiTypography-root-125 MuiTypography-body1-134"
      >
        
      </p>
    </div>
  </div>
</div>
`;
